Refactor code, add new layout, change icon

--- a/app/src/main/res/menu/action_status_bar_menu.xml
+++ b/app/src/main/res/menu/action_status_bar_menu.xml
@@ -11,6 +11,12 @@
     <item
         android:id="@+id/settings_button"
         android:title="Ustawienia"
+        app:showAsAction="never"
+        />
+
+    <item
+        android:id="@+id/about_app"
+        android:title="O aplikacji"
         app:showAsAction="never" />
 
 </menu>
