--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,17 @@
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorPrimary</item>
+
+        <item name="android:itemBackground">@color/white</item>
+        <item name="android:itemTextAppearance">@style/TextAppearance</item>
     </style>
+
+    <style name="TextAppearance">
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
 </resources>
