--- a/app/src/main/res/menu/action_status_bar_menu.xml
+++ b/app/src/main/res/menu/action_status_bar_menu.xml
@@ -9,14 +9,8 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/settings_button"
-        android:title="Ustawienia"
-        app:showAsAction="never"
-        />
-
-    <item
         android:id="@+id/about_app"
-        android:title="O aplikacji"
+        android:title="@string/about"
         app:showAsAction="never" />
 
 </menu>
