--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,18 +3,25 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/shop_button"
-            android:title="Shop button"
-            android:icon="@mipmap/ic_shop" />
-
-        <item
-            android:id="@+id/upload_button"
-            android:title="Upload button"
-            android:icon="@mipmap/ic_upload" />
-
-        <item
             android:id="@+id/settings_button"
-            android:title="Settings button"
+            android:title="@string/settings_name"
+            android:icon="@mipmap/ic_settings"/>
+        <item
+            android:id="@+id/settings_button2"
+            android:title="@string/settings_name"
+            android:icon="@mipmap/ic_settings"/>
+        <item
+            android:id="@+id/settings_button3"
+            android:title="@string/settings_name"
+            android:icon="@mipmap/ic_settings"/>
+        <item
+            android:id="@+id/settings_button4"
+            android:title="@string/settings_name"
+            android:icon="@mipmap/ic_settings"/>
+
+        <item
+            android:id="@+id/settings_button5"
+            android:title="@string/settings_name"
             android:icon="@mipmap/ic_settings"/>
     </group>
 
